fix nav elements not showing after toggle - move code in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,6 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-/* main content */
-main {
-    background-color: lightblue;
-    /* make main element take up any surplus space to push footer down */
-    flex: 1 0 auto;
-}
 /* header */
 header {
     background-color: #ffffff;
@@ -32,6 +26,9 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -45,6 +42,7 @@ h1 {
     color: #252525;
 }
 
+/* nav bar */
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -57,4 +55,41 @@ h1 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* nav bar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
+/* nav toggle */
+#nav-toggle:checked ~ nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
+}
+
+/* main content */
+main {
+    background-color: lightblue;
+    /* make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+}
+
+/* footer */
+footer {
+    background-color: orange;
 }
